# MyHomeWorksDjango

./: .env.example  .gitignore  README.md  arguments.txt  data.json  pyproject.toml  requirements.txt
barbershop/: settings.py  urls.py
core/: admin.py  apps.py  context_processors.py  data.py  forms.py  models.py  signals.py  telegram_bot.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_order_options.py  0003_order_core_order_client__3038eb_idx_and_more.py  0004_alter_review_is_published_alter_service_description_and_more.py  0005_master_view_count.py  0006_alter_review_master_alter_review_photo.py  0007_alter_service_options.py
core/templates/: landing.html
core/templates/core/: landing.html  master_detail.html  order_card.html  order_detail.html  order_form.html  orders_list.html  review_card.html  review_card_include.html  review_form.html  service_card_include.html  service_create.html  services_list.html  thanks.html
core/templatetags/: my_extras.py
static/css/: main.css  orders_list.css
static/js/: reviews.js
templates/: base.html  menu.html
templates/registration/: logged_out.html  login.html
users/: backends.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html
